--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -35,7 +35,7 @@ parts:
        - python3-pyqt5
        - qt5-gtk-platformtheme
        - shared-mime-info
-       - ttf-ubuntu-font-family
+       - fonts-ubuntu
        - xdg-user-dirs
        - samba-libs
 
