feta: ffmpeg issue fixes 1

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -8,6 +8,7 @@ base: core22
 
 architectures:
   - build-on: [amd64]
+    run-on: [amd64]
 
 slots:
   pyqt5-runtime-core22:
@@ -44,15 +45,10 @@ parts:
       - mpv
       - ffmpeg
 
-
   cleanup:
     after:
       - platform
     plugin: nil
     override-prime: |
-      set -eux
-      craftctl default
-      cd $CRAFT_PRIME
-      find . -type f,l -name "*.h" -exec rm -f {} \;
       cd usr/share
       rm -rf apport bash-completion bug doc doc-base lintian man pam-configs pkgconfig upstart zsh
