--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -8,7 +8,7 @@ base: core22
 
 architectures:
   - build-on: [amd64]
-    run-on: [amd64]
+    build-for: [amd64]
 
 slots:
   pyqt5-runtime-core22:
