--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -23,7 +23,7 @@ parts:
      stage-packages:
        - adwaita-icon-theme
        - dmz-cursor-theme
-       - gnome-themes-standard
+#       - gnome-themes-standard
        - gsettings-desktop-schemas
        - libdb5.3
        - libgdk-pixbuf2.0-0
