feta: core22 new build

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,15 +1,13 @@
 name: pyqt5-runtime-core22
-version: '24.04'
-summary: PyQt5 runtime stack based on core24.
+version: '22.04'
+summary: PyQt5 runtime stack based on core22.
 description: This snap is to be consumed by various PyQt5 apps which uses Qt 5.15+ Qt provides C++ classes and QML types for rendering GUI.
 grade: stable
 confinement: strict
-base: core24
+base: core22
 
-platforms:
-  amd64:
-    build-on: [amd64]
-    build-for: [amd64]
+architectures:
+  - build-on: amd64
 
 slots:
   pyqt5-runtime-core22:
@@ -23,7 +21,7 @@ parts:
      stage-packages:
        - adwaita-icon-theme
        - dmz-cursor-theme
-#       - gnome-themes-standard
+       - gnome-themes-standard
        - gsettings-desktop-schemas
        - libdb5.3
        - libgdk-pixbuf2.0-0
