--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -40,6 +40,10 @@ parts:
        - samba-libs
        - ffmpeg
        - mpv
+       - python3-pyqt5.qtwebengine
+       - libqt5webenginecore5
+       - libqt5webenginewidgets5
+       - libqt5webengine5
 
   cleanup:
     after:
