--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -44,6 +44,7 @@ parts:
        - libqt5webenginecore5
        - libqt5webenginewidgets5
        - libqt5webengine5
+       - qtwebengine5-dev
 
   cleanup:
     after:
