feat: qtwebengine fix 2

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -45,6 +45,30 @@ parts:
        - libqt5webenginewidgets5
        - libqt5webengine5
        - qtwebengine5-dev
+       - libnss3
+       - libxss1
+       - libasound2
+       - libxtst6
+       - libgbm1
+       - libvulkan1
+       - libminizip1
+       - libevent-2.1-7
+       - libjsoncpp24
+       - libre2-9
+       - libsnappy1v5
+       - libwebpdemux2
+       - libxslt1.1
+       - libhyphen0
+       - libopus0
+       - libvpx6
+       - libharfbuzz-icu0
+       - liblcms2-2
+       - libopenjp2-7
+       - libjbig0
+       - libjpeg-turbo8
+       - libtiff5
+       - libwebp6
+       - libwebpmux3
 
   cleanup:
     after:
