--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -53,22 +53,24 @@ parts:
        - libvulkan1
        - libminizip1
        - libevent-2.1-7
-       - libjsoncpp24
+       - libjsoncpp25
        - libre2-9
        - libsnappy1v5
        - libwebpdemux2
        - libxslt1.1
        - libhyphen0
        - libopus0
-       - libvpx6
+       - libvpx7
        - libharfbuzz-icu0
        - liblcms2-2
        - libopenjp2-7
        - libjbig0
        - libjpeg-turbo8
        - libtiff5
-       - libwebp6
+       - libwebp7
        - libwebpmux3
+       - libicu70
+       - libpng16-16
 
   cleanup:
     after:
