--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -44,6 +44,8 @@ parts:
        - libqt5webenginewidgets5
        - libqt5webenginecore5
        - libqt5webchannel5
+       - qtwebengine5-dev  # optional, only if building from source
+
 
   cleanup:
     after:
