--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -42,6 +42,7 @@ parts:
        - mpv
        - freeglut3
        - libgtk2.0-0
+       - python3-pyqt5.qtwebengine
        - libqt5webengine5
        - libqt5webenginewidgets5
        - libqt5webenginecore5
